    and generate URL keys.
  * Linux standalone, OSX app: Improve runshell script to always quote
    shell vars, so that it will work when eg, untarred into a directory
    path with spaces in its name.
  * Revert removal dependency on obsolete hamlet package, since the
    autobuilders are not ready for this change yet and it prevented them
    from building the webapp. Reopens: #786659

 -- Joey Hess <id@joeyh.name>  Fri, 22 May 2015 22:23:32 -0400

git-annex (5.20150522) unstable; urgency=medium

  * import: Refuse to import files that are within the work tree, as that
    does not make sense and could cause data loss.
  * drop: Now supports --all, --unused, and --key.
  * drop: Now defaults to --all when run in a bare repository.
    (Previously, did nothing when run in a bare repository.)
  * get, move, copy, mirror: Concurrent transfers are now supported!
    For example: git-annex get -J10
    However, progress bars are not yet displayed for concurrent transfers,
    pending an updated version of the ascii-progress library.
  * --quiet now makes progress output by rsync, wget, etc be quiet too.
  * Take space that will be used by other running downloads into account when
    checking annex.diskreserve.
  * Avoid accumulating transfer failure log files unless the assistant is
    being used.
  * Fix an unlikely race that could result in two transfers of the same key
    running at once.
  * Stale transfer lock and info files will be cleaned up automatically
    when get/unused/info commands are run.
  * unused: Add --used-refspec option and annex.used-refspec, which can
    specify a set of refs to consider used, rather than the default of
    considering all refs used.
  * webapp: Fix zombie xdg-open process left when opening file browser.
    Closes: #785498
  * Safer posix fctnl locking implementation, using lock pools and STM.
  * Build documentation with TZ=UTC for reproducible builds. See #785736.