@@ -21,8 +21,6 @@ import Utility.Exception
 import Data.List
 import Data.Char
 import System.IO
-import Control.Applicative
-import Prelude
 
 externalSHA :: String -> Int -> FilePath -> IO (Either String String)
 externalSHA command shasize file = do
