@@ -8,6 +8,9 @@ git-annex (5.20150523) UNRELEASED; urgency=medium
   * Revert removal dependency on obsolete hamlet package, since the
     autobuilders are not ready for this change yet and it prevented them
     from building the webapp. Reopens: #786659
+  * fsck: When checksumming a file fails due to a hardware fault,
+    the file is now moved to the bad directory, and the fsck proceeds.
+    Before, the fsck immediately failed.
 
  -- Joey Hess <id@joeyh.name>  Fri, 22 May 2015 22:23:32 -0400
 
